syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstHeroTableItemExBasicExpandProtobuf";

message	ConstHeroTableItemExBasicExpand  {
		uint32	hp = 1;
		uint32	attack = 2;
		uint32	defense = 3;
		uint32	speed = 4;
}