syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstHeroTableItemExStarUpgradeFomulaProtobuf";

message	ConstHeroTableItemExStarUpgradeFomula  {
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar1	star_1 = 1;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar2	star_2 = 2;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar3	star_3 = 3;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar4	star_4 = 4;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar5	star_5 = 5;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar6	star_6 = 6;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar7	star_7 = 7;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar8	star_8 = 8;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar9	star_9 = 9;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar10	star_10 = 10;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar11	star_11 = 11;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar12	star_12 = 12;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar13	star_13 = 13;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar14	star_14 = 14;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar15	star_15 = 15;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar16	star_16 = 16;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar17	star_17 = 17;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar18	star_18 = 18;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar19	star_19 = 19;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar20	star_20 = 20;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar21	star_21 = 21;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar22	star_22 = 22;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar23	star_23 = 23;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar24	star_24 = 24;
	optional	ConstHeroTableItemEx.constHeroTableItemExStarUpgradeFomula.constHeroTableItemExStarUpgradeFomulaStar25	star_25 = 25;
}