syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstHeroTableItemExStarUpgradeFomulaStar7Protobuf";

message	ConstHeroTableItemExStarUpgradeFomulaStar7  {
		uint32	hp = 1;
		uint32	attack = 2;
		uint32	defense = 3;
		uint32	speed = 4;
		uint32	hp_upgrade = 5;
		uint32	attack_upgrade = 6;
		uint32	defense_upgrade = 7;
		uint32	speed_upgrade = 8;
}